compreview-apps/labs/compreview-apps/beeper-api/beeper-db.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    template.alpha.openshift.io/wait-for-ready: "true"
  labels:
    template: postgresql-persistent-template
  name: beeper-db
  namespace: workshop-support
spec:
  replicas: 1
  selector:
    matchLabels:
      name: postgresql
      app: beeper-db
  template:
    metadata:
      labels:
        name: postgresql
        app: beeper-db
    spec:
      containers:
      - capabilities: {}
        image: registry.ocp4.example.com:8443/rhel8/postgresql-13:1-7
        imagePullPolicy: IfNotPresent
        name: postgresql
        ports:
        - containerPort: 5432
          protocol: TCP
        resources:
          requests:
            cpu: 250m
            memory: 1Gi
          limits:
            cpu: 500m
            memory: 1536Mi
        securityContext:
          capabilities: {}
          privileged: false
        terminationMessagePath: /dev/termination-log
        livenessProbe:
          exec:
            command:
            - /usr/libexec/check-container
            - --live
          initialDelaySeconds: 120
          timeoutSeconds: 10
        readinessProbe:
          exec:
            command:
            - /usr/libexec/check-container
          initialDelaySeconds: 5
          timeoutSeconds: 1
        volumeMounts:
        - mountPath: /var/lib/pgsql/data
          name: postgresql-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
      - name: postgresql-data
        persistentVolumeClaim:
          claimName: beeper-db
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    template.openshift.io/expose-uri: postgres://{.spec.clusterIP}:{.spec.ports[?(.name=="postgresql")].port}
  labels:
    template: postgresql-persistent-template
  name: beeper-db
  namespace: workshop-support
spec:
  ports:
  - name: postgresql
    protocol: TCP
    port: 5432
    nodePort: 0
    targetPort: 5432
  selector:
    app: beeper-db
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
