compreview-apps/labs/compreview-apps/beeper-api/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: beeper-api-route
  namespace: workshop-support
spec:
  host: CHANGE_ME
  port:
    targetPort: https
  to:
    kind: Service
    name: CHANGE_ME
    weight: null
  tls:
    termination: CHANGE_ME
