compreview-apps/labs/compreview-apps/beeper-api/networkpolicy-beeper-api.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: beeper-api
  namespace: workshop-support
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              CHANGE_ME: ""
      ports:
        - protocol: TCP
          port: 8080
